# aoc-2022

./: Cargo.toml  build.gradle.kts
src/main/kotlin/day1/: Day1.kt  Day1.rs
src/main/kotlin/day2/: Day2.kt
src/main/kotlin/day3/: Day3.kt  Day3P2.kt
src/main/kotlin/day4/: Day4.kt
src/main/kotlin/day5/: Day5.kt
src/main/kotlin/day6/: Day6.kt
src/main/kotlin/day7/: Day7.kt  Node.kt
src/main/kotlin/day8/: Day8.kt
src/main/kotlin/days/: Day.kt
src/main/kotlin/util/: Runner.kt
