[package]
name = "AdventOfCode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[profile.release]
overflow-checks = true

[[bin]]
name = "AdventOfCode2022"
path = "src/main/kotlin/day1/Day1.rs"